--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -10,3 +10,10 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'PingFang';
+  src: url('PingFang.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
